[package]
name = "rust_bucket"
version = "0.1.0"
authors = ["Matt Pindell <pindell.m@gmail.com>", "Regis Boudinot <boudinot.regis@yahoo.com>", "Alex Hill <alexander.d.hill.89@gmail.com>"]
build = "build.rs"

[features]
default = []
benchmarks = []

[dependencies]
serde = "0.7.11"
serde_json = "0.7.4"

[build-dependencies]
serde_codegen = "0.7.11"